--- a/notebooks/FFtrEFM basic processing.ipynb
+++ b/notebooks/FFtrEFM basic processing.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,8 @@
     "# On my system, this is base_file_path = r'G:\\My Drive\\FFTA_Notebook\\notebook_data'\n",
     "#base_file_path = r'G:\\My Drive\\FFTA_Notebook\\notebook_data'\n",
     "\n",
-    "ibw_path = base_file_path + r'\\perovskite_example.ibw'\n",
-    "folder_path = base_file_path + r'\\perovskite'"
+    "#ibw_path = base_file_path + r'\\perovskite_example.ibw'\n",
+    "#folder_path = base_file_path + r'\\perovskite'\n"
    ]
   },
   {
@@ -109,9 +109,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\raj\\documents\\coding\\sidpy\\sidpy\\sid\\translator.py:44: FutureWarning: Consider using sidpy.Reader instead of sidpy.Translator if possible and contribute your reader to ScopeReaders\n",
+      "  FutureWarning)\n",
+      "c:\\users\\raj\\documents\\coding\\pyusid\\pyusid\\pyUSID\\io\\hdf_utils\\simple.py:1096: UserWarning: In the future write_ind_val_dsets will default to requiring dimensions to be arranged from slowest to fastest varying\n",
+      "  warn('In the future write_ind_val_dsets will default to requiring dimensions to be arranged from slowest to fastest varying')\n",
+      "c:\\users\\raj\\documents\\coding\\pyusid\\pyusid\\pyUSID\\io\\hdf_utils\\simple.py:1153: UserWarning: pyUSID.io.hdf_utils.simple.write_ind_val_dsets no longer createsregion references for each dimension. Please use pyUSID.io.reg_ref.write_region_references to manually create region references\n",
+      "  warn('pyUSID.io.hdf_utils.simple.write_ind_val_dsets no longer creates'\n",
+      "c:\\users\\raj\\documents\\coding\\ffta\\ffta\\ffta\\load\\load_hdf.py:319: H5pyDeprecationWarning: The default file mode will change to 'r' (read-only) in h5py 3.0. To suppress this warning, pass the mode you need to h5py.File(), or set the global default h5.get_config().default_file_mode, or set the environment variable H5PY_DEFAULT_READONLY=1. Available modes are: 'r', 'r+', 'w', 'w-'/'x', 'a'. See the docs for details.\n",
+      "  hdf = h5py.File(h5_path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F:\\Raj - trEFM data\\20200914 - MAPI IMskpm ff fk kp\\FF10_-5V_floating_600mA_postPL02 folder path\n",
+      "Loading first signal\n",
+      "#### FFtrEFM_0000.ibw ####\n",
+      "#### FFtrEFM_0001.ibw ####\n",
+      "#### FFtrEFM_0002.ibw ####\n",
+      "#### FFtrEFM_0003.ibw ####\n",
+      "#### FFtrEFM_0004.ibw ####\n",
+      "#### FFtrEFM_0005.ibw ####\n",
+      "#### FFtrEFM_0006.ibw ####\n",
+      "#### FFtrEFM_0007.ibw ####\n",
+      "#### FFtrEFM_0008.ibw ####\n",
+      "#### FFtrEFM_0009.ibw ####\n",
+      "#### FFtrEFM_0010.ibw ####\n",
+      "#### FFtrEFM_0011.ibw ####\n",
+      "#### FFtrEFM_0012.ibw ####\n",
+      "#### FFtrEFM_0013.ibw ####\n",
+      "#### FFtrEFM_0014.ibw ####\n",
+      "#### FFtrEFM_0015.ibw ####\n",
+      "#### FFtrEFM_0016.ibw ####\n",
+      "#### FFtrEFM_0017.ibw ####\n",
+      "#### FFtrEFM_0018.ibw ####\n",
+      "#### FFtrEFM_0019.ibw ####\n",
+      "#### FFtrEFM_0020.ibw ####\n",
+      "#### FFtrEFM_0021.ibw ####\n",
+      "#### FFtrEFM_0022.ibw ####\n",
+      "#### FFtrEFM_0023.ibw ####\n",
+      "#### FFtrEFM_0024.ibw ####\n",
+      "#### FFtrEFM_0025.ibw ####\n",
+      "#### FFtrEFM_0026.ibw ####\n",
+      "#### FFtrEFM_0027.ibw ####\n",
+      "#### FFtrEFM_0028.ibw ####\n",
+      "#### FFtrEFM_0029.ibw ####\n",
+      "#### FFtrEFM_0030.ibw ####\n",
+      "#### FFtrEFM_0031.ibw ####\n",
+      "#### FFtrEFM_0032.ibw ####\n",
+      "#### FFtrEFM_0033.ibw ####\n",
+      "#### FFtrEFM_0034.ibw ####\n",
+      "#### FFtrEFM_0035.ibw ####\n",
+      "#### FFtrEFM_0036.ibw ####\n",
+      "#### FFtrEFM_0037.ibw ####\n",
+      "#### FFtrEFM_0038.ibw ####\n",
+      "#### FFtrEFM_0039.ibw ####\n",
+      "#### FFtrEFM_0040.ibw ####\n",
+      "#### FFtrEFM_0041.ibw ####\n",
+      "#### FFtrEFM_0042.ibw ####\n",
+      "#### FFtrEFM_0043.ibw ####\n",
+      "#### FFtrEFM_0044.ibw ####\n",
+      "#### FFtrEFM_0045.ibw ####\n",
+      "#### FFtrEFM_0046.ibw ####\n",
+      "#### FFtrEFM_0047.ibw ####\n",
+      "#### FFtrEFM_0048.ibw ####\n",
+      "#### FFtrEFM_0049.ibw ####\n",
+      "#### FFtrEFM_0050.ibw ####\n",
+      "#### FFtrEFM_0051.ibw ####\n",
+      "#### FFtrEFM_0052.ibw ####\n",
+      "#### FFtrEFM_0053.ibw ####\n",
+      "#### FFtrEFM_0054.ibw ####\n",
+      "#### FFtrEFM_0055.ibw ####\n",
+      "#### FFtrEFM_0056.ibw ####\n",
+      "#### FFtrEFM_0057.ibw ####\n",
+      "#### FFtrEFM_0058.ibw ####\n",
+      "#### FFtrEFM_0059.ibw ####\n",
+      "#### FFtrEFM_0060.ibw ####\n",
+      "#### FFtrEFM_0061.ibw ####\n",
+      "#### FFtrEFM_0062.ibw ####\n",
+      "#### FFtrEFM_0063.ibw ####\n",
+      "*** Copy-Paste below code for IDE access to h5***\n",
+      "import h5py\n",
+      "h5_file = h5py.File(r'F:/Raj - trEFM data/20200914 - MAPI IMskpm ff fk kp\\FF10_postPL02_v3.h5')\n",
+      "h5_avg = h5_file['FF_Group/FF_Avg']\n"
+     ]
+    }
+   ],
    "source": [
     "# If in Spyder or an equivalent IDE, the following brings up a dialogue box for selecting the files\n",
     "# h5_path, parm_dict, h5_avg = ffta.load.load_hdf.load_wrapper()\n",
@@ -120,6 +211,8 @@
     "base_file_path = r'F:\\Raj - trEFM data\\150921-PTB7'\n",
     "ibw_path = base_file_path + r'\\FF4_128img.ibw'\n",
     "folder_path = base_file_path + r'\\FF4_CH03dB10V128'\n",
+    "ibw_path = r'F:/Raj - trEFM data/20200914 - MAPI IMskpm ff fk kp/FF10_postPL02_v3.ibw'\n",
+    "folder_path = r'F:\\Raj - trEFM data\\20200914 - MAPI IMskpm ff fk kp\\FF10_-5V_floating_600mA_postPL02'\n",
     "h5_path, parm_dict, h5_avg = ffta.load.load_hdf.load_wrapper(ibw_file_path=ibw_path, ff_file_path=folder_path)"
    ]
   },
