Documentation and Notebook update

--- a/docs/notebooks/basic_processing.ipynb
+++ b/docs/notebooks/basic_processing.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "topo_path = r'PATH_WHERE_YOU_SAVED_THE_ASSOCIATED_TOPOGRAPHY_IMAGE'\n",
     "\n",
     "# In my case, that's this:\n",
-    "# Comment out thesse line on your machine\n",
+    "# Comment out this line on your machine\n",
     "ibw_folder = r'G:\\My Drive\\FFTA_Notebook\\notebook_data\\perovskite'\n",
     "topo_path = r'G:\\My Drive\\FFTA_Notebook\\notebook_data\\perovskite_example.ibw'"
    ]
@@ -99,7 +99,7 @@
     "For this notebook, we will use Option 1. For future reference, this would be the command sequence for option 2:\n",
     "\n",
     "```\n",
-    "h5_path, data_files, parm_dict = ffta.load.load_hdf.load_folder(ibw_folder) # processes the folder into file paths\n",
+    "h5_path, data_files, parm_dict = ffta.load.load_hdf.load_folder(ff_folder) # processes the folder into file paths\n",
     "h5_avg = ffta.load.load_hdf.load_FF(data_files, parm_dict, h5_path) # Saves the data into an HDF\n",
     "```\n",
     "\n",
